Fix clipping of contact form's ph suffix
This affected Gecko & iPad.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -439,7 +439,8 @@ textarea:focus {
 }
 
 .contact_form #phone_suffix {
-  width: 50px;
+  /* Firefox & iPad needs at least 60px */
+  width: 60px;
   height: 38px;
 }
 
